--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -2,20 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>method</key>
-    <string>app-store</string>
-    <key>uploadBitcode</key>
-    <false/>
-    <key>uploadSymbols</key>
-    <true/>
-    <key>compileBitcode</key>
-    <false/>
-    <key>teamID</key>
-    <string>YOUR_TEAM_ID</string>
-    <key>provisioningProfiles</key>
-    <dict>
-        <key>YOUR_BUNDLE_ID</key>
-        <string>YOUR_PROVISIONING_PROFILE_NAME</string>
-    </dict>
+	<key>method</key>
+	<string>app-store</string>
+	<key>uploadBitcode</key>
+	<false/>
+	<key>uploadSymbols</key>
+	<true/>
+	<key>compileBitcode</key>
+	<false/>
+	<key>teamID</key>
+	<string>JZT9NPY56A</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>com.opticore.soundry</key>
+		<string>Soundry_dist</string>
+	</dict>
 </dict>
 </plist>
